APDS-167, APDS-168 Hidden checkboxes are causing the name column to appear shifted to the left... this has been resolved by applying a separate class to the second column in the table. Also applied fix for review tasks and home dashboard showing an incorrect background for the sidebar in the light theme.

--- a/app/styles/feedback.scss
+++ b/app/styles/feedback.scss
@@ -664,3 +664,5 @@ strong {
     outline-offset: 0;
     box-shadow: none;
 }
+.review-tasks .table-full-small tbody > tr > td:nth-child(2), 
+.review-tasks .table-full-small thead tr > th:nth-child(2){padding-left:20px;}
